# firepod

./: .buckconfig  .dockerignore  .gitignore  AWESOME_UFFD_SUMMARY.md  BUCK  BUILD_INSTRUCTIONS.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Containerfile.allow-other  Containerfile.bench-hugepages  Containerfile.inception  Containerfile.libfuse-remap  Containerfile.nested  Containerfile.pjdfstest  Containerfile.test  Containerfile.unhealthy  Containerfile.vsock-integrity  DESIGN.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  NESTED.md  PERFORMANCE.md  PLAN.md  README.md  UFFD_IMPLEMENTATION.md  build.rs  deny.toml  inception.sh  nested.sh  rootfs-config.toml  rootfs-plan.toml  rust-toolchain.toml
.cargo/: config.toml
.claude/: CLAUDE.md  settings.local.json
.claude/skills/pr-workflow/: SKILL.md
.config/: nextest.toml
.github/: dependabot.yml
.github/actions/checkout-deps/: action.yml
.github/workflows/: build-host-kernel.yml  build-runner-ami.yml  ci.yml  claude-lint.yml  claude.yml  kernels.yml  nightly.yml  sanity.yml
benches/: clone.rs  exec.rs  hugepages.rs
config/: fcvm.example.yml  microvm-kernel-aarch64-5.10-fuse.config
docs/: DESIGN-ipv6-bridged.md
exec-proto/: Cargo.toml
exec-proto/src/: lib.rs
fc-agent/: BUCK  Cargo.toml  fc-agent.service
fc-agent/src/: agent.rs  container.rs  exec.rs  lock_test.rs  main.rs  mmds.rs  mounts.rs  network.rs  output.rs  restore.rs  system.rs  tty.rs  types.rs  vsock.rs
fc-agent/src/fuse/: client.rs  fusefs.rs  mod.rs  pending.rs  pipelined.rs  protocol.rs
fcvm/: BUCK  Cargo.toml
fcvm/src/: cli.rs  disk.rs  error.rs  firecracker.rs  lib.rs  main.rs  mmds.rs  network.rs  snapshot.rs  state.rs  vm_manager.rs
fcvm/src/firecracker/: api.rs  mod.rs  vm.rs
fcvm/src/network/: mod.rs  privileged.rs  rootless.rs
fcvm/src/readiness/: http.rs  log.rs  vsock.rs
fcvm/src/storage/: disk.rs  mod.rs  snapshot.rs  volume.rs
fuse-pipe/: Cargo.toml  Makefile  TESTING.md
fuse-pipe/benches/: operations.rs  protocol.rs  throughput.rs
fuse-pipe/examples/: latency_bench.rs  low_latency_server.rs  simple_client.rs  simple_server.rs  spawn_blocking_bench.rs
fuse-pipe/src/: lib.rs  telemetry.rs
fuse-pipe/src/client/: fuse.rs  mod.rs  mount.rs  multiplexer.rs
fuse-pipe/src/protocol/: mod.rs  request.rs  response.rs  types.rs  wire.rs
fuse-pipe/src/server/: config.rs  credentials.rs  handler.rs  mod.rs  passthrough.rs  pipelined.rs  zerocopy.rs
fuse-pipe/src/transport/: mod.rs  traits.rs  unix.rs  vsock.rs
fuse-pipe/tests/: integration.rs  integration_root.rs  pjdfstest.rs  pjdfstest_common.rs  pjdfstest_fast.rs  pjdfstest_full.rs  pjdfstest_matrix.rs  pjdfstest_matrix_root.rs  pjdfstest_stress.rs  profile_direct.rs  profile_write.rs  test_allow_other.rs  test_mount_stress.rs  test_permission_edge_cases.rs  test_remap_file_range.rs  test_unmount_race.rs
fuse-pipe/tests/common/: mod.rs
fuse-pipe/tests/libfuse_remap/: ficlone_test.c  libfuse-remap.patch
fuse-pipe/tests/stress/: fixture.rs  harness.rs  main.rs  metrics.rs  worker.rs
fuse-test/: Cargo.toml
fuse-test/src/: main.rs  metrics.rs  stress.rs  worker.rs
kernel/: 0001-fuse-add-remap_file_range-support.patch  README.md  build-host.sh  build.sh  inception.conf  nested-x86.conf  nested.conf
kernel/host/arm64/: nv2-mmio-barrier.patch  (+1 more)
kernel/patches/: 0001-fuse-add-remap_file_range-support.patch  0002-fuse-fix-utimensat-with-default-permissions.patch  mmfr4-override.patch  nv2-mmio-barrier.patch  nv2-vsock-cache-sync.patch  nv2-vsock-rx-barrier.patch  psci-debug-handle-exit.patch  psci-debug-psci.patch
kernel/patches-arm64/: 0001-fuse-add-remap_file_range-support.patch  0002-fuse-fix-utimensat-with-default-permissions.patch  mmfr4-override.vm.patch  psci-debug-emulate-nested.patch  wfx-stopped-exit.patch
network/: nftables-template.nft
patches/: firecracker-nv2.patch
scripts/: analyze_ci_vms.py  build-ami.sh  build-kernel.sh  build-slirp4netns.sh  create-rootfs-debian.sh  fcvm-init.sh  kernel-patch.sh  no-sudo.sh  nv2-corruption-test.sh  preflight.sh  run_fuse_pipe_tests.sh  setup-nftables.sh  setup-runner.sh  stress_test_clone.py  test-packaging-e2e.sh  test-packaging.sh
scripts/claude-assistant/: index.ts  package.json  pnpm-lock.yaml  rust_out
src/: health.rs  lib.rs  main.rs  paths.rs  types.rs  utils.rs
src/cli/: args.rs  mod.rs  types.rs
src/commands/: clone.rs  common.rs  completions.rs  exec.rs  inspect.rs  logs.rs  ls.rs  memory_server.rs  mod.rs  podman.rs  run.rs  serve.rs  setup.rs  snapshot.rs  snapshots.rs  stop.rs  test.rs  top.rs  tty.rs
src/firecracker/: api.rs  config.rs  mod.rs  vm.rs
src/network/: bridged.rs  mod.rs  namespace.rs  pasta.rs  portmap.rs  privileged.rs  rootless.rs  slirp.rs  types.rs  veth.rs
src/readiness/: exec.rs  http.rs  mod.rs
src/setup/: embedded.rs  kernel.rs  kernel_build.rs  mod.rs  preflight.rs  rootfs.rs  storage.rs
src/state/: manager.rs  mod.rs  types.rs  utils.rs
src/storage/: disk.rs  mod.rs  snapshot.rs
src/uffd/: handler.rs  mod.rs  server.rs
src/volume/: mod.rs  protocol.rs  server.rs
templates/: mmds-plan-example.json
tests/: README.md  lint.rs  package-lock.json  package.json  test_base_image.rs  test_btrfs_fuse.rs  test_cli_parsing.rs  test_clone_connection.rs  test_ctrlc.rs  test_diff_snapshot.rs  test_egress.rs  test_egress_stress.rs  test_exec.rs  test_extra_disks.rs  test_forward_localhost.rs  test_fuse_copy_file_range_vm.rs  test_fuse_in_vm.rs  test_fuse_in_vm_matrix.rs  test_fuse_posix.rs  test_health_monitor.rs  test_host_dns.rs  test_hugepages.rs  test_kvm.rs  test_library_api.rs  test_localhost_image.rs  test_network.rs  test_network_debug.rs  test_no_sudo.rs  test_packaging.rs  test_podman_cache.rs  test_podman_healthcheck.rs  test_podman_snapshot.rs  test_port_forward.rs  test_proxy.rs  test_readme_examples.rs  test_remap_file_range.rs  test_rootfs_size.rs  test_sanity.rs  test_serve.rs  test_serve_sdk.ts  (+9 more)
tests/common/: mod.rs
tests/vsock-integrity/: Cargo.toml  run-test.sh
(+10 files in other folders)
