[workspace]
members = [".", "fuse-pipe", "fc-agent"]
# Build all members by default (not just the root package)
default-members = [".", "fuse-pipe", "fc-agent"]
# Exclude sync-test (used only for Makefile sync verification)
exclude = ["sync-test"]
# Resolver v2 makes --no-default-features work across all workspace members
resolver = "2"

[package]
name = "fcvm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "signal", "io-util", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
which = "6"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
libc = "0.2"
nix = { version = "0.29", features = ["sched", "net", "fs", "user", "mount"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
rand = "0.8"
async-trait = "0.1"
hyper = { version = "0.14", features = ["client", "http1"] }
hyperlocal = "0.8"
shellexpand = "3"
userfaultfd = "0.8"
memmap2 = "0.9"
vmm-sys-util = "0.12"
shell-words = "1"
fuse-pipe = { path = "fuse-pipe", default-features = false }
url = "2"
tokio-util = "0.7"
regex = "1.12.2"
fs2 = "0.4.3"

[features]
# Default: all integration tests that work without sudo (rootless networking)
default = ["integration-fast", "integration-slow"]

# Test speed tiers (unit tests always run, no feature flag needed)
integration-fast = []        # Quick VM tests, < 30s each (sanity, signal, exec, port forward)
integration-slow = []        # Slow VM tests, > 30s each (clone, snapshot, fuse posix, egress)

# Privileged tests require sudo (bridged networking, pjdfstest, iptables)
privileged-tests = []

# Lint tests (fmt, clippy, audit, deny) - run separately via: make lint
lint-tests = []

[dev-dependencies]
serial_test = "3"
criterion = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "exec"
harness = false

[[bench]]
name = "clone"
harness = false
