[package]
name = "fcvm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "signal", "io-util", "sync", "net", "time"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
which = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
nix = { version = "0.29", features = ["fs", "mount", "process", "signal", "socket", "user", "net"] }
uuid = { version = "1", features = ["v4", "serde"] }
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
hyperlocal = "0.9"
http-body-util = "0.1"
thiserror = "1"
libc = "0.2"
tempfile = "3"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
