[package]
name = "fuse-pipe"
version = "0.1.0"
edition = "2021"
description = "High-performance FUSE-over-pipe/vsock implementation with async pipelining"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ejc3/fuse-pipe"
keywords = ["fuse", "filesystem", "vsock", "async", "pipelining"]
categories = ["filesystem", "asynchronous"]

[features]
default = ["fuse-client"]
fuse-client = ["dep:fuser"]
metrics = ["dep:metrics"]
pjdfstest-full = []
trace-benchmarks = []  # Enable tracing in benchmarks

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
libc = "0.2"
anyhow = "1"
thiserror = "1"
nix = { version = "0.29", features = ["fs", "user"] }
crossbeam-channel = "0.5"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "io-util", "net"] }
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# fuse-backend-rs for passthrough filesystem (Cloud Hypervisor's production-grade FUSE backend)
fuse-backend-rs = { version = "0.12", default-features = false, features = ["fusedev"] }
vm-memory = "0.14"

# Optional: FUSE client (use GitHub fork with multi-reader support via FUSE_DEV_IOC_CLONE)
fuser = { git = "https://github.com/ejc3/fuser.git", branch = "master", optional = true }

# Concurrent data structures
dashmap = "5.5"

# Optional: Metrics
metrics = { version = "0.23", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util", "process", "time"] }
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "protocol"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "operations"
harness = false

[[test]]
name = "pjdfstest_fast"
path = "tests/pjdfstest_fast.rs"
harness = false

[[test]]
name = "pjdfstest_full"
path = "tests/pjdfstest_full.rs"
harness = false
