[package]
name = "fuse-pipe"
version = "0.1.0"
edition = "2021"
description = "High-performance FUSE-over-pipe/vsock implementation with async pipelining"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ejc3/fuse-pipe"
keywords = ["fuse", "filesystem", "vsock", "async", "pipelining"]
categories = ["filesystem", "asynchronous"]

[features]
default = ["integration-slow"]
trace-benchmarks = []  # Enable tracing in benchmarks
privileged-tests = []  # Gate tests requiring root
integration-slow = []  # Gate slow tests (pjdfstest)

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
libc = "0.2"
anyhow = "1"
thiserror = "1"
nix = { version = "0.29", features = ["fs", "user"] }
crossbeam-channel = "0.5"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "io-util", "net"] }
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"  # Bridge log crate to tracing

# fuse-backend-rs for passthrough filesystem (Cloud Hypervisor's production-grade FUSE backend)
# Using local path for development - synced to EC2 via `make sync`
fuse-backend-rs = { path = "../../fuse-backend-rs", default-features = false, features = ["fusedev"] }

# FUSE client (fork with clone_fd for true parallel readers + remap_file_range)
# Based on upstream PR #636 (clone_fd for parallel processing) + remap_file_range
fuser = { git = "https://github.com/ejc3/fuser.git", branch = "remap-file-range-on-clone-fd", features = ["abi-7-28"] }

# Concurrent data structures
dashmap = "5.5"

# Checksum for corruption detection
crc32fast = "1.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util", "process", "time"] }
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "protocol"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "operations"
harness = false

[[test]]
name = "pjdfstest_matrix_root"
path = "tests/pjdfstest_matrix_root.rs"
